--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 					<input id="party" name="party" class="right_unit-inn" type="text" placeholder="Введите ИНН организации">
 				</section>
 
-				<div class="result_name_org"><a href="#" id="result_name_org" onclick="ext_Copy()"></a></div>
-				<div class="result_inn_org"><a href="#" id="result_inn_org" onclick="ext_Copy()"></a></div>
+				<div class="result_name_org"><a href="#" id="result_name_org" onclick="ext_Copy(this)" return false;></a></div>
+				<div class="result_inn_org"><a href="#" id="result_inn_org" onclick="ext_Copy(this)" return false;></a></div>
 				<div id="region_bank" class="bank_region"></div>
 
 			</div>
 		</div>
 
-<input type="text" id="result_name_org" onclick="ext_Copy()" class="input_name_org">
+
 
 
 <script src="js/jquery.min.js"></script>
