Еще немного добавил

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="right_unit">
 				
 				<section class="container">
-					<input id="party" name="party" class="right_unit-inn" type="text" placeholder="Введите ИНН организации">
+					<input id="party" name="party" class="right_unit-inn" type="text" placeholder="Введите ИНН организации" ondblclick="clearInput()">
 				</section>
 
 				<div class="result_name_org"><a href="#" id="result_name_org" onclick="ext_Copy(this)" return false;></a></div>
